# CareViaApp

./: README.md  help.txt  pubspec.yaml
SampleCodes/assets/: 20240725.json  FarmzRing_history_rawdata.20240518.json  HistoricalData-historyRawDataArray.json  data.json  sleep_history_20240131.json  test.json  test1.json  wm_dump_06-11-2024-08-43.json
SampleCodes/lib/: main.dart
android/app/: build.gradle.kts
ios/Runner/: Info.plist
lib/: device_info_page.dart  main.dart  retrieve_data_page.dart  ring_data_receiver.dart  ring_live_page.dart  sample_data_page.dart
lib/background/: background_scheduler.dart  background_worker.dart  history_processor.dart  history_processor_isolate.dart
lib/bluetooth/: bluetooth_io.dart  bluetooth_listener.dart  bluetooth_manager.dart  bluetooth_uuid.dart  permission_manager.dart  ring_device.dart
lib/data/: history_controller.dart  ring_settings.dart  ring_settings.g.dart  ring_settings_repository.dart
lib/models/: health_sample.dart  history_sample.dart
lib/runtime/: ring_live_buffer.dart  ring_sdk_bridge.dart
lib/ui/pages/: home_page.dart  (+1 more)
macos/Flutter/: GeneratedPluginRegistrant.swift
smartring_plugin/: .metadata  Project_tree.md  README.md  ffigen.yaml  pubspec.yaml
smartring_plugin/android/: build.gradle  settings.gradle
smartring_plugin/example/: README.md  pubspec.yaml
smartring_plugin/ios/: smartring_plugin.podspec
smartring_plugin/lib/: smartring_plugin.dart  smartring_plugin_bindings_generated.dart
smartring_plugin/src/: CMakeLists.txt  smartring_plugin.c  smartring_plugin.h
test/: widget_test.dart
(+99 files in other folders)
